--- a/Jsons/tvConfig.json
+++ b/Jsons/tvConfig.json
@@ -134,8 +134,8 @@
   "1": [
     {
       "id": 0,
-      "caption": 0,
-      "bgColor": "222222",
+      "caption": "b0",
+      "bgColor": "6D6D6D",
       "textColor": "ffffff",
       "width": 0.03,
       "startYear": -30000000000,
@@ -147,9 +147,9 @@
     },
     {
       "id": 1,
-      "caption": 1,
-      "bgColor": "3B3B3B",
-      "textColor": "ffffff",
+      "caption": "b1",
+      "bgColor": "9F9F9F",
+      "textColor": "000000",
       "width": 0.03,
       "startYear": -20000000000,
       "startMonth": 1,
@@ -160,9 +160,9 @@
     },
     {
       "id": 2,
-      "caption": 2,
-      "bgColor": "545454",
-      "textColor": "ffffff",
+      "caption": "b2",
+      "bgColor": "BFBFBF",
+      "textColor": "000000",
       "width": 0.03,
       "startYear": -10000000000,
       "startMonth": 1,
@@ -173,9 +173,9 @@
     },
     {
       "id": 3,
-      "caption": 3,
-      "bgColor": "6D6D6D",
-      "textColor": "ffffff",
+      "caption": "b3",
+      "bgColor": "CCCCCC",
+      "textColor": "000000",
       "width": 0.03,
       "startYear": -7029355584,
       "startMonth": 1,
@@ -186,8 +186,8 @@
     },
     {
       "id": 4,
-      "caption": 4,
-      "bgColor": "868686",
+      "caption": "m4",
+      "bgColor": "883333",
       "textColor": "ffffff",
       "width": 0.03,
       "startYear": -3233284672,
@@ -199,9 +199,9 @@
     },
     {
       "id": 5,
-      "caption": 5,
-      "bgColor": "9F9F9F",
-      "textColor": "000000",
+      "caption": "m5",
+      "bgColor": "884444",
+      "textColor": "ffffff",
       "width": 0.03,
       "startYear": -1527590400,
       "startMonth": 1,
@@ -212,9 +212,9 @@
     },
     {
       "id": 6,
-      "caption": 6,
-      "bgColor": "B8B8B8",
-      "textColor": "000000",
+      "caption": "m6",
+      "bgColor": "955353",
+      "textColor": "ffffff",
       "width": 0.03,
       "startYear": -700058496,
       "startMonth": 1,
@@ -225,9 +225,9 @@
     },
     {
       "id": 7,
-      "caption": 7,
-      "bgColor": "BFBFBF",
-      "textColor": "000000",
+      "caption": "m7",
+      "bgColor": "A16262",
+      "textColor": "ffffff",
       "width": 0.03,
       "startYear": -250539328,
       "startMonth": 1,
@@ -238,9 +238,9 @@
     },
     {
       "id": 8,
-      "caption": 8,
-      "bgColor": "C6C6C6",
-      "textColor": "000000",
+      "caption": "m8",
+      "bgColor": "AE7171",
+      "textColor": "ffffff",
       "width": 0.03,
       "startYear": -120456576,
       "startMonth": 1,
@@ -251,9 +251,9 @@
     },
     {
       "id": 9,
-      "caption": 9,
-      "bgColor": "CCCCCC",
-      "textColor": "000000",
+      "caption": "m9",
+      "bgColor": "BB8080",
+      "textColor": "ffffff",
       "width": 0.03,
       "startYear": -60158144,
       "startMonth": 1,
@@ -264,9 +264,9 @@
     },
     {
       "id": 10,
-      "caption": 10,
-      "bgColor": "884444",
-      "textColor": "ffffff",
+      "caption": "m10",
+      "bgColor": "C88F8F",
+      "textColor": "000000",
       "width": 0.03,
       "startYear": -23585472,
       "startMonth": 1,
@@ -277,9 +277,9 @@
     },
     {
       "id": 11,
-      "caption": 11,
-      "bgColor": "955353",
-      "textColor": "ffffff",
+      "caption": "m11",
+      "bgColor": "D49E9E",
+      "textColor": "000000",
       "width": 0.03,
       "startYear": -11316672,
       "startMonth": 1,
@@ -290,9 +290,9 @@
     },
     {
       "id": 12,
-      "caption": 12,
-      "bgColor": "A16262",
-      "textColor": "ffffff",
+      "caption": "m12",
+      "bgColor": "E1ADAD",
+      "textColor": "000000",
       "width": 0.03,
       "startYear": -5429376,
       "startMonth": 1,
@@ -303,9 +303,9 @@
     },
     {
       "id": 13,
-      "caption": 13,
-      "bgColor": "AE7171",
-      "textColor": "ffffff",
+      "caption": "m13",
+      "bgColor": "ECBABA",
+      "textColor": "000000",
       "width": 0.03,
       "startYear": -2605824,
       "startMonth": 1,
@@ -316,9 +316,9 @@
     },
     {
       "id": 14,
-      "caption": 14,
-      "bgColor": "BB8080",
-      "textColor": "ffffff",
+      "caption": "m14",
+      "bgColor": "EEAAAA",
+      "textColor": "000000",
       "width": 0.03,
       "startYear": -1249344,
       "startMonth": 1,
@@ -329,9 +329,9 @@
     },
     {
       "id": 15,
-      "caption": 15,
-      "bgColor": "C88F8F",
-      "textColor": "000000",
+      "caption": "k15",
+      "bgColor": "446644",
+      "textColor": "ffffff",
       "width": 0.03,
       "startYear": -599616,
       "startMonth": 1,
@@ -342,9 +342,9 @@
     },
     {
       "id": 16,
-      "caption": 16,
-      "bgColor": "D49E9E",
-      "textColor": "000000",
+      "caption": "k16",
+      "bgColor": "568056",
+      "textColor": "ffffff",
       "width": 0.03,
       "startYear": -288576,
       "startMonth": 1,
@@ -355,9 +355,9 @@
     },
     {
       "id": 17,
-      "caption": 17,
-      "bgColor": "E1ADAD",
-      "textColor": "000000",
+      "caption": "k17",
+      "bgColor": "689A68",
+      "textColor": "ffffff",
       "width": 0.03,
       "startYear": -138240,
       "startMonth": 1,
@@ -368,9 +368,9 @@
     },
     {
       "id": 18,
-      "caption": 18,
-      "bgColor": "ECBABA",
-      "textColor": "000000",
+      "caption": "k18",
+      "bgColor": "7AB47A",
+      "textColor": "000001",
       "width": 0.03,
       "startYear": -67392,
       "startMonth": 1,
@@ -381,8 +381,8 @@
     },
     {
       "id": 19,
-      "caption": 19,
-      "bgColor": "EEAAAA",
+      "caption": "k19",
+      "bgColor": "8CCE8C",
       "textColor": "000000",
       "width": 0.03,
       "startYear": -31104,
@@ -394,9 +394,9 @@
     },
     {
       "id": 20,
-      "caption": 20,
-      "bgColor": "8888AA",
-      "textColor": "ffffff",
+      "caption": "k20",
+      "bgColor": "9EE89E",
+      "textColor": "000000",
       "width": 0.03,
       "startYear": -15180,
       "startMonth": 1,
@@ -407,8 +407,8 @@
     },
     {
       "id": 21,
-      "caption": 21,
-      "bgColor": "9494B3",
+      "caption": "y21",
+      "bgColor": "7777AA",
       "textColor": "ffffff",
       "width": 0.03,
       "startYear": -5580,
@@ -420,198 +420,198 @@
     },
     {
       "id": 22,
-      "caption": 22,
-      "bgColor": "A0A0BB",
+      "caption": "y22",
+      "bgColor": "8888AB",
       "textColor": "ffffff",
       "width": 0.03,
       "startYear": -675,
       "startMonth": 1,
       "startDay": 1,
       "endYear": 2025,
-      "endMonth": 11,
-      "endDay": 22
+      "endMonth": 12,
+      "endDay": 8
     },
     {
       "id": 23,
-      "caption": 23,
-      "bgColor": "ABABC4",
+      "caption": "y23",
+      "bgColor": "9494B3",
       "textColor": "ffffff",
       "width": 0.03,
       "startYear": 725,
       "startMonth": 1,
       "startDay": 1,
       "endYear": 2025,
-      "endMonth": 11,
-      "endDay": 22
+      "endMonth": 12,
+      "endDay": 8
     },
     {
       "id": 24,
-      "caption": 24,
-      "bgColor": "B7B7CC",
-      "textColor": "000001",
+      "caption": "y24",
+      "bgColor": "A0A0BB",
+      "textColor": "ffffff",
       "width": 0.03,
       "startYear": 1375,
       "startMonth": 1,
       "startDay": 1,
       "endYear": 2025,
-      "endMonth": 11,
-      "endDay": 22
+      "endMonth": 12,
+      "endDay": 8
     },
     {
       "id": 25,
-      "caption": 25,
-      "bgColor": "C2C2D5",
-      "textColor": "000000",
+      "caption": "y25",
+      "bgColor": "ABABC4",
+      "textColor": "ffffff",
       "width": 0.03,
       "startYear": 1705,
       "startMonth": 1,
       "startDay": 1,
       "endYear": 2025,
-      "endMonth": 11,
-      "endDay": 22
+      "endMonth": 12,
+      "endDay": 8
     },
     {
       "id": 26,
-      "caption": 26,
-      "bgColor": "CECEDE",
-      "textColor": "000000",
+      "caption": "y26",
+      "bgColor": "B7B7CC",
+      "textColor": "000001",
       "width": 0.03,
       "startYear": 1875,
       "startMonth": 1,
       "startDay": 1,
       "endYear": 2025,
-      "endMonth": 11,
-      "endDay": 22
+      "endMonth": 12,
+      "endDay": 8
     },
     {
       "id": 27,
-      "caption": 27,
-      "bgColor": "DADAE6",
+      "caption": "y27",
+      "bgColor": "C2C2D5",
       "textColor": "000000",
       "width": 0.03,
       "startYear": 1955,
       "startMonth": 1,
       "startDay": 1,
       "endYear": 2025,
-      "endMonth": 11,
-      "endDay": 22
+      "endMonth": 12,
+      "endDay": 8
     },
     {
       "id": 28,
-      "caption": 28,
-      "bgColor": "E5E5EF",
+      "caption": "y28",
+      "bgColor": "CECEDE",
       "textColor": "000000",
       "width": 0.03,
       "startYear": 1995,
       "startMonth": 1,
       "startDay": 1,
       "endYear": 2025,
-      "endMonth": 11,
-      "endDay": 22
+      "endMonth": 12,
+      "endDay": 8
     },
     {
       "id": 29,
-      "caption": 29,
-      "bgColor": "CCCCEE",
+      "caption": "y29",
+      "bgColor": "DADAE6",
       "textColor": "000000",
       "width": 0.03,
       "startYear": 2014,
       "startMonth": 12,
-      "startDay": 10,
+      "startDay": 26,
       "endYear": 2025,
-      "endMonth": 11,
-      "endDay": 22
+      "endMonth": 12,
+      "endDay": 8
     },
     {
       "id": 30,
-      "caption": 30,
-      "bgColor": "446644",
-      "textColor": "ffffff",
+      "caption": "y30",
+      "bgColor": "E5E5EF",
+      "textColor": "000000",
       "width": 0.03,
       "startYear": 2022,
       "startMonth": 8,
-      "startDay": 10,
+      "startDay": 26,
       "endYear": 2025,
-      "endMonth": 11,
-      "endDay": 22
+      "endMonth": 12,
+      "endDay": 8
     },
     {
       "id": 31,
-      "caption": 31,
+      "caption": "m31",
       "bgColor": "568056",
       "textColor": "ffffff",
       "width": 0.03,
       "startYear": 2024,
       "startMonth": 4,
-      "startDay": 1,
+      "startDay": 17,
       "endYear": 2025,
-      "endMonth": 11,
-      "endDay": 22
+      "endMonth": 12,
+      "endDay": 8
     },
     {
       "id": 32,
-      "caption": 32,
+      "caption": "m32",
       "bgColor": "689A68",
       "textColor": "ffffff",
       "width": 0.03,
       "startYear": 2025,
-      "startMonth": 1,
-      "startDay": 26,
+      "startMonth": 2,
+      "startDay": 11,
       "endYear": 2025,
-      "endMonth": 11,
-      "endDay": 22
+      "endMonth": 12,
+      "endDay": 8
     },
     {
       "id": 33,
-      "caption": 33,
+      "caption": "m33",
       "bgColor": "7AB47A",
       "textColor": "000001",
       "width": 0.03,
       "startYear": 2025,
-      "startMonth": 6,
-      "startDay": 25,
+      "startMonth": 7,
+      "startDay": 11,
       "endYear": 2025,
-      "endMonth": 11,
-      "endDay": 22
+      "endMonth": 12,
+      "endDay": 8
     },
     {
       "id": 34,
-      "caption": 34,
+      "caption": "m34",
       "bgColor": "8CCE8C",
       "textColor": "000000",
       "width": 0.03,
       "startYear": 2025,
       "startMonth": 9,
-      "startDay": 8,
+      "startDay": 24,
       "endYear": 2025,
-      "endMonth": 11,
-      "endDay": 22
+      "endMonth": 12,
+      "endDay": 8
     },
     {
       "id": 35,
-      "caption": 35,
+      "caption": "m35",
       "bgColor": "9EE89E",
       "textColor": "000000",
       "width": 0.03,
       "startYear": 2025,
       "startMonth": 10,
-      "startDay": 13,
+      "startDay": 29,
       "endYear": 2025,
-      "endMonth": 11,
-      "endDay": 22
+      "endMonth": 12,
+      "endDay": 8
     },
     {
       "id": 36,
-      "caption": 36,
-      "bgColor": "CCEECC",
-      "textColor": "000000",
+      "caption": "d36",
+      "bgColor": "222222",
+      "textColor": "ffffff",
       "width": 0.03,
       "startYear": 2025,
       "startMonth": 11,
-      "startDay": 8,
+      "startDay": 24,
       "endYear": 2025,
-      "endMonth": 11,
-      "endDay": 22
+      "endMonth": 12,
+      "endDay": 8
     }
   ],
   "2": [
