fix(userSettings): set debugMode to false for production readiness

--- a/Jsons/settings/userSettings.json
+++ b/Jsons/settings/userSettings.json
@@ -1,6 +1,6 @@
 {
   "defaultLanguage": "en",
-  "debugMode": true,
+  "debugMode": false,
   "tv1Show": true,
   "tv2Show": true,
   "tv3Show": true,
