fix(userSettings): ensure isHorizontal is set to false for consistent layout

--- a/Jsons/settings/userSettings.json
+++ b/Jsons/settings/userSettings.json
@@ -11,6 +11,7 @@
   "tablePLShow": false,
   "wikiDatesShow": true,
   "wikiBtnsShow": false,
+  "isHorizontal": false,
   "splitH": 75,
   "splitV": 75,
   "infopanelScreen": "settings",
