fix(userSettings): remove redundant calendar entry and ensure consistent formatting

--- a/Jsons/settings/userSettings.json
+++ b/Jsons/settings/userSettings.json
@@ -16,11 +16,11 @@
   "splitV": 75,
   "infopanelScreen": "settings",
   "wikiName": "Eugène_Goupil",
+  "calendar": "gregorian",
 
   "//TODOlater 1": "guest user: save in localStorage",
   "//TODOlater 2": "userAccount: save also in user settings",
   "//TODOlater 3": "sourceLayoutIndex",
   "//TODOlater 4": "color theme",
-  "//TODOlater 5": "last focused dates",
-  "//TODOlater 6": "default calendar system"
+  "//TODOlater 5": "last focused dates"
 }
