fix(buttonsConfig): update parameter1 from 'wikipedia' to 'sources' for UIwikipage

--- a/Jsons/buttonsConfig.json
+++ b/Jsons/buttonsConfig.json
@@ -166,7 +166,7 @@
       "alignV": 4,
       "alignH": 2,
       "functionName": "setInfopanelScreen",
-      "parameter1": "wikipedia",
+      "parameter1": "sources",
       "parameter2": "UIwikipage"
     },
     {
