Refactor Timeline Atlas Builder: - Remove timeline-atlas.png file. - Update buildTimelineAtlas.mjs to generate multiple atlas sizes (128x64, 96x48, 64x32, 32x16) with debug options. - Modify output filenames to include size in the format timeline-atlas-{size}.png and timeline-atlas-{size}.json. - Enhance functions for rendering SVGs and adding debug borders. - Update package.json scripts to include git commit and push after running tools. - Revise documentation in TOOLS.md to clarify usage and output files. - Add build.bat script for easier execution on Windows.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dbtm": "npm --prefix Tools run dbtm",
     "cosmos": "npm --prefix Tools run cosmos",
     "svg": "npm --prefix Tools run svg",
-    "sprite": "npm --prefix Tools run sprite"
+    "sprite": "npm --prefix Tools run sprite",
+    "atlas": "npm --prefix Tools run atlas"
   }
 }
