--- a/Tools/package.json
+++ b/Tools/package.json
@@ -5,14 +5,20 @@
   "type": "module",
 
   "scripts": {
-    "loc": "node jsontools/toolloc.js",
-    "btn": "node jsontools/toolbtn.js",
-    "tv": "node jsontools/tooltv.js",
-    "dbtm": "node jsontools/tooldbtm.js",
-    "cosmos": "node jsontools/toolcosmos.js",
+    "loc": "node jsontools/toolloc.js && git add ../Jsons/language && git commit -m \"update loc\" && git push",
+    "loc-n": "node jsontools/toolloc.js",
+    "btn": "node jsontools/toolbtn.js && git add ../Jsons/buttonsConfig.json && git commit -m \"update btn\" && git push",
+    "btn-n": "node jsontools/toolbtn.js",
+    "tv": "node jsontools/tooltv.js && git add ../Jsons/tvConfig.json && git commit -m \"update tv\" && git push",
+    "tv-n": "node jsontools/tooltv.js",
+    "dbtm": "node jsontools/tooldbtm.js && git add ../Jsons/dbtm.json && git commit -m \"update dbtm\" && git push",
+    "dbtm-n": "node jsontools/tooldbtm.js",
+    "cosmos": "node jsontools/toolcosmos.js && git add ../Jsons/cosmos.json && git commit -m \"update cosmos\" && git push",
+    "cosmos-n": "node jsontools/toolcosmos.js",
     "svg": "node \"svg scripts/recenteresizeformat/transform.mjs\"",
     "sprite": "node \"svg scripts/buildUiSprite.mjs\"",
-    "build:atlas": "node \"TimelineAtlas scripts/buildTimelineAtlas.mjs\""
+    "atlas": "node \"TimelineAtlas scripts/buildTimelineAtlas.mjs\" && git add ../TimelineAtlas && git commit -m \"update atlas\" && git push",
+    "atlas-n": "node \"TimelineAtlas scripts/buildTimelineAtlas.mjs\""
   },
   "devDependencies": {
     "svg-path-commander": "^2.1.11",
