--- a/Jsons/tvConfig.json
+++ b/Jsons/tvConfig.json
@@ -107,7 +107,7 @@
     {
       "id": 8,
       "caption": "tv_milenium",
-      "bgColor": "9F9F9F",
+      "bgColor": "AAAAAA",
       "textColor": "000000",
       "width": 0.15,
       "startYear": 1026,
