--- a/Jsons/tvConfig.json
+++ b/Jsons/tvConfig.json
@@ -134,6 +134,454 @@
   "1": [
     {
       "id": 0,
+      "caption": "tv_hadean",
+      "bgColor": "883333",
+      "textColor": "ffffff",
+      "width": 0.15,
+      "startYear": -4500000000,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": -4000000000,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 1,
+      "caption": "tv_archean",
+      "bgColor": "884444",
+      "textColor": "ffffff",
+      "width": 0.14,
+      "startYear": -4000000000,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": -2500000000,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 2,
+      "caption": "tv_proterozoic",
+      "bgColor": "955353",
+      "textColor": "ffffff",
+      "width": 0.14,
+      "startYear": -2500000000,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": -540000000,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 3,
+      "caption": "tv_phanerozoic",
+      "bgColor": "A16262",
+      "textColor": "ffffff",
+      "width": 0.14,
+      "startYear": -540000000,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 4242,
+      "endMonth": 4,
+      "endDay": 2
+    },
+    {
+      "id": 4,
+      "caption": "tv_paleozoic",
+      "bgColor": "AE7171",
+      "textColor": "ffffff",
+      "width": 0.14,
+      "startYear": -540000000,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": -250000000,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 5,
+      "caption": "tv_mesozoic",
+      "bgColor": "BB8080",
+      "textColor": "ffffff",
+      "width": 0.14,
+      "startYear": -250000000,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": -65000000,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 6,
+      "caption": "tv_cenozoic",
+      "bgColor": "AE7171",
+      "textColor": "ffffff",
+      "width": 0.15,
+      "startYear": -65000000,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 4242,
+      "endMonth": 4,
+      "endDay": 2
+    }
+  ],
+  "2": [
+    {
+      "id": 0,
+      "caption": "tv_stone",
+      "bgColor": "689A68",
+      "textColor": "ffffff",
+      "width": 0.11,
+      "startYear": -3400000,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": -3300,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 1,
+      "caption": "tv_bronze",
+      "bgColor": "568056",
+      "textColor": "ffffff",
+      "width": 0.11,
+      "startYear": -3300,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": -1200,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 2,
+      "caption": "tv_iron",
+      "bgColor": "446644",
+      "textColor": "ffffff",
+      "width": 0.11,
+      "startYear": -1200,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": -500,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 3,
+      "caption": "tv_antiquity",
+      "bgColor": "568056",
+      "textColor": "ffffff",
+      "width": 0.11,
+      "startYear": -3500,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 500,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 4,
+      "caption": "tv_middle ages",
+      "bgColor": "689A68",
+      "textColor": "ffffff",
+      "width": 0.11,
+      "startYear": 500,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1500,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 5,
+      "caption": "tv_renaissance",
+      "bgColor": "7AB47A",
+      "textColor": "000001",
+      "width": 0.11,
+      "startYear": 1400,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1650,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 6,
+      "caption": "tv_enlightenment",
+      "bgColor": "8CCE8C",
+      "textColor": "000000",
+      "width": 0.11,
+      "startYear": 1650,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1800,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 7,
+      "caption": "tv_industrial",
+      "bgColor": "9EE89E",
+      "textColor": "000000",
+      "width": 0.11,
+      "startYear": 1800,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1945,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 8,
+      "caption": "tv_contemporary",
+      "bgColor": "8CCE8C",
+      "textColor": "000000",
+      "width": 0.12,
+      "startYear": 195,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 4242,
+      "endMonth": 4,
+      "endDay": 2
+    }
+  ],
+  "3": [
+    {
+      "id": 0,
+      "caption": "tv_1850s",
+      "bgColor": "797979",
+      "textColor": "D9D9D9",
+      "width": 0.06,
+      "startYear": 1850,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1859,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 1,
+      "caption": "tv_1860s",
+      "bgColor": "999999",
+      "textColor": "000000",
+      "width": 0.06,
+      "startYear": 1860,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1869,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 2,
+      "caption": "tv_1870s",
+      "bgColor": "797979",
+      "textColor": "D9D9D9",
+      "width": 0.06,
+      "startYear": 1870,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1879,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 3,
+      "caption": "tv_1880s",
+      "bgColor": "999999",
+      "textColor": "000000",
+      "width": 0.06,
+      "startYear": 1880,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1889,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 4,
+      "caption": "tv_1890s",
+      "bgColor": "797979",
+      "textColor": "D9D9D9",
+      "width": 0.06,
+      "startYear": 1890,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1899,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 5,
+      "caption": "tv_1900s",
+      "bgColor": "999999",
+      "textColor": "000000",
+      "width": 0.06,
+      "startYear": 1900,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1909,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 6,
+      "caption": "tv_1910s",
+      "bgColor": "797979",
+      "textColor": "D9D9D9",
+      "width": 0.06,
+      "startYear": 1910,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1919,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 7,
+      "caption": "tv_1920s",
+      "bgColor": "999999",
+      "textColor": "000000",
+      "width": 0.06,
+      "startYear": 1920,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1929,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 8,
+      "caption": "tv_1930s",
+      "bgColor": "797979",
+      "textColor": "D9D9D9",
+      "width": 0.06,
+      "startYear": 1930,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1939,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 9,
+      "caption": "tv_1940s",
+      "bgColor": "999999",
+      "textColor": "000000",
+      "width": 0.06,
+      "startYear": 1940,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1949,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 10,
+      "caption": "tv_1950s",
+      "bgColor": "797979",
+      "textColor": "D9D9D9",
+      "width": 0.06,
+      "startYear": 1950,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1959,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 11,
+      "caption": "tv_1960s",
+      "bgColor": "999999",
+      "textColor": "000000",
+      "width": 0.06,
+      "startYear": 1960,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1969,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 12,
+      "caption": "tv_1970s",
+      "bgColor": "797979",
+      "textColor": "D9D9D9",
+      "width": 0.06,
+      "startYear": 1970,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1979,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 13,
+      "caption": "tv_1980s",
+      "bgColor": "999999",
+      "textColor": "000000",
+      "width": 0.06,
+      "startYear": 1980,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1989,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 14,
+      "caption": "tv_1990s",
+      "bgColor": "797979",
+      "textColor": "D9D9D9",
+      "width": 0.06,
+      "startYear": 1990,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 1999,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 15,
+      "caption": "tv_2000s",
+      "bgColor": "999999",
+      "textColor": "000000",
+      "width": 0.06,
+      "startYear": 2000,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 2009,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 16,
+      "caption": "tv_2010s",
+      "bgColor": "797979",
+      "textColor": "D9D9D9",
+      "width": 0.06,
+      "startYear": 2010,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 2019,
+      "endMonth": 12,
+      "endDay": 31
+    },
+    {
+      "id": 17,
+      "caption": "tv_2020s",
+      "bgColor": "999999",
+      "textColor": "000000",
+      "width": 0.06,
+      "startYear": 2020,
+      "startMonth": 1,
+      "startDay": 1,
+      "endYear": 2029,
+      "endMonth": 12,
+      "endDay": 31
+    }
+  ],
+  "4": [
+    {
+      "id": 0,
       "caption": "b0",
       "bgColor": "6D6D6D",
       "textColor": "ffffff",
@@ -517,7 +965,7 @@
       "width": 0.03,
       "startYear": 2015,
       "startMonth": 1,
-      "startDay": 26,
+      "startDay": 28,
       "endYear": 4242,
       "endMonth": 4,
       "endDay": 2
@@ -530,7 +978,7 @@
       "width": 0.03,
       "startYear": 2022,
       "startMonth": 9,
-      "startDay": 26,
+      "startDay": 28,
       "endYear": 4242,
       "endMonth": 4,
       "endDay": 2
@@ -543,7 +991,7 @@
       "width": 0.03,
       "startYear": 2024,
       "startMonth": 5,
-      "startDay": 18,
+      "startDay": 20,
       "endYear": 4242,
       "endMonth": 4,
       "endDay": 2
@@ -556,7 +1004,7 @@
       "width": 0.03,
       "startYear": 2025,
       "startMonth": 3,
-      "startDay": 14,
+      "startDay": 16,
       "endYear": 4242,
       "endMonth": 4,
       "endDay": 2
@@ -569,7 +1017,7 @@
       "width": 0.03,
       "startYear": 2025,
       "startMonth": 8,
-      "startDay": 11,
+      "startDay": 13,
       "endYear": 4242,
       "endMonth": 4,
       "endDay": 2
@@ -582,7 +1030,7 @@
       "width": 0.03,
       "startYear": 2025,
       "startMonth": 10,
-      "startDay": 25,
+      "startDay": 27,
       "endYear": 4242,
       "endMonth": 4,
       "endDay": 2
@@ -594,8 +1042,8 @@
       "textColor": "000000",
       "width": 0.03,
       "startYear": 2025,
-      "startMonth": 11,
-      "startDay": 29,
+      "startMonth": 12,
+      "startDay": 1,
       "endYear": 4242,
       "endMonth": 4,
       "endDay": 2
@@ -608,246 +1056,10 @@
       "width": 0.03,
       "startYear": 2025,
       "startMonth": 12,
-      "startDay": 25,
+      "startDay": 27,
       "endYear": 4242,
       "endMonth": 4,
       "endDay": 2
-    }
-  ],
-  "2": [
-    {
-      "id": 0,
-      "caption": "tv_1850s",
-      "bgColor": "797979",
-      "textColor": "D9D9D9",
-      "width": 0.06,
-      "startYear": 1850,
-      "startMonth": 1,
-      "startDay": 1,
-      "endYear": 1859,
-      "endMonth": 12,
-      "endDay": 31
-    },
-    {
-      "id": 1,
-      "caption": "tv_1860s",
-      "bgColor": "999999",
-      "textColor": "000000",
-      "width": 0.06,
-      "startYear": 1860,
-      "startMonth": 1,
-      "startDay": 1,
-      "endYear": 1869,
-      "endMonth": 12,
-      "endDay": 31
-    },
-    {
-      "id": 2,
-      "caption": "tv_1870s",
-      "bgColor": "797979",
-      "textColor": "D9D9D9",
-      "width": 0.06,
-      "startYear": 1870,
-      "startMonth": 1,
-      "startDay": 1,
-      "endYear": 1879,
-      "endMonth": 12,
-      "endDay": 31
-    },
-    {
-      "id": 3,
-      "caption": "tv_1880s",
-      "bgColor": "999999",
-      "textColor": "000000",
-      "width": 0.06,
-      "startYear": 1880,
-      "startMonth": 1,
-      "startDay": 1,
-      "endYear": 1889,
-      "endMonth": 12,
-      "endDay": 31
-    },
-    {
-      "id": 4,
-      "caption": "tv_1890s",
-      "bgColor": "797979",
-      "textColor": "D9D9D9",
-      "width": 0.06,
-      "startYear": 1890,
-      "startMonth": 1,
-      "startDay": 1,
-      "endYear": 1899,
-      "endMonth": 12,
-      "endDay": 31
-    },
-    {
-      "id": 5,
-      "caption": "tv_1900s",
-      "bgColor": "999999",
-      "textColor": "000000",
-      "width": 0.06,
-      "startYear": 1900,
-      "startMonth": 1,
-      "startDay": 1,
-      "endYear": 1909,
-      "endMonth": 12,
-      "endDay": 31
-    },
-    {
-      "id": 6,
-      "caption": "tv_1910s",
-      "bgColor": "797979",
-      "textColor": "D9D9D9",
-      "width": 0.06,
-      "startYear": 1910,
-      "startMonth": 1,
-      "startDay": 1,
-      "endYear": 1919,
-      "endMonth": 12,
-      "endDay": 31
-    },
-    {
-      "id": 7,
-      "caption": "tv_1920s",
-      "bgColor": "999999",
-      "textColor": "000000",
-      "width": 0.06,
-      "startYear": 1920,
-      "startMonth": 1,
-      "startDay": 1,
-      "endYear": 1929,
-      "endMonth": 12,
-      "endDay": 31
-    },
-    {
-      "id": 8,
-      "caption": "tv_1930s",
-      "bgColor": "797979",
-      "textColor": "D9D9D9",
-      "width": 0.06,
-      "startYear": 1930,
-      "startMonth": 1,
-      "startDay": 1,
-      "endYear": 1939,
-      "endMonth": 12,
-      "endDay": 31
-    },
-    {
-      "id": 9,
-      "caption": "tv_1940s",
-      "bgColor": "999999",
-      "textColor": "000000",
-      "width": 0.06,
-      "startYear": 1940,
-      "startMonth": 1,
-      "startDay": 1,
-      "endYear": 1949,
-      "endMonth": 12,
-      "endDay": 31
-    },
-    {
-      "id": 10,
-      "caption": "tv_1950s",
-      "bgColor": "797979",
-      "textColor": "D9D9D9",
-      "width": 0.06,
-      "startYear": 1950,
-      "startMonth": 1,
-      "startDay": 1,
-      "endYear": 1959,
-      "endMonth": 12,
-      "endDay": 31
-    },
-    {
-      "id": 11,
-      "caption": "tv_1960s",
-      "bgColor": "999999",
-      "textColor": "000000",
-      "width": 0.06,
-      "startYear": 1960,
-      "startMonth": 1,
-      "startDay": 1,
-      "endYear": 1969,
-      "endMonth": 12,
-      "endDay": 31
-    },
-    {
-      "id": 12,
-      "caption": "tv_1970s",
-      "bgColor": "797979",
-      "textColor": "D9D9D9",
-      "width": 0.06,
-      "startYear": 1970,
-      "startMonth": 1,
-      "startDay": 1,
-      "endYear": 1979,
-      "endMonth": 12,
-      "endDay": 31
-    },
-    {
-      "id": 13,
-      "caption": "tv_1980s",
-      "bgColor": "999999",
-      "textColor": "000000",
-      "width": 0.06,
-      "startYear": 1980,
-      "startMonth": 1,
-      "startDay": 1,
-      "endYear": 1989,
-      "endMonth": 12,
-      "endDay": 31
-    },
-    {
-      "id": 14,
-      "caption": "tv_1990s",
-      "bgColor": "797979",
-      "textColor": "D9D9D9",
-      "width": 0.06,
-      "startYear": 1990,
-      "startMonth": 1,
-      "startDay": 1,
-      "endYear": 1999,
-      "endMonth": 12,
-      "endDay": 31
-    },
-    {
-      "id": 15,
-      "caption": "tv_2000s",
-      "bgColor": "999999",
-      "textColor": "000000",
-      "width": 0.06,
-      "startYear": 2000,
-      "startMonth": 1,
-      "startDay": 1,
-      "endYear": 2009,
-      "endMonth": 12,
-      "endDay": 31
-    },
-    {
-      "id": 16,
-      "caption": "tv_2010s",
-      "bgColor": "797979",
-      "textColor": "D9D9D9",
-      "width": 0.06,
-      "startYear": 2010,
-      "startMonth": 1,
-      "startDay": 1,
-      "endYear": 2019,
-      "endMonth": 12,
-      "endDay": 31
-    },
-    {
-      "id": 17,
-      "caption": "tv_2020s",
-      "bgColor": "999999",
-      "textColor": "000000",
-      "width": 0.06,
-      "startYear": 2020,
-      "startMonth": 1,
-      "startDay": 1,
-      "endYear": 2029,
-      "endMonth": 12,
-      "endDay": 31
     }
   ]
 }
