--- a/Tools/package.json
+++ b/Tools/package.json
@@ -14,7 +14,8 @@
     "cosmos": "(node jsontools/toolcosmos.js && git -C .. add -f Jsons/cosmos.json && git -C .. commit -m \"update cosmos\" && git -C .. push && echo \"success\") || echo \"failure\"",
     "cosmos-n": "node jsontools/toolcosmos.js",
     "tmconvert": "(node \"svg scripts/recenteresizeformat/transform.mjs\" && echo \"success\") || echo \"failure\"",
-    "uisprites": "(node \"svg scripts/buildUiSprite.mjs\" && echo \"success\") || echo \"failure\"",
+    "sprite": "(node \"svg scripts/buildUiSprite.mjs\" && git -C .. add -f Icons_UI/sprites-ui.svg && git -C .. commit -m \"update sprite\" && git -C .. push && echo \"success\") || echo \"failure\"",
+    "sprite-n": "node \"svg scripts/buildUiSprite.mjs\"",
     "atlas": "(node \"Icons_TimeMarks scripts/buildIcons_TimeMarks.mjs\" && git -C .. add -f Icons_TimeMarks/Atlas && git -C .. commit -m \"update atlas\" && git -C .. push && echo \"success\") || echo \"failure\"",
     "atlas-n": "node \"Icons_TimeMarks scripts/buildIcons_TimeMarks.mjs\""
   },
