--- a/Jsons/tvConfig2.json
+++ b/Jsons/tvConfig2.json
@@ -705,7 +705,7 @@
         "endYear": 4242,
         "endMonth": 4,
         "endDay": 2,
-        "bgColor": "1ABC9C",
+        "bgColor": "00D9A5",
         "textColor": "000000",
         "width": 10,
         "url": "Renewable_energy",
@@ -721,7 +721,7 @@
         "endYear": -10000,
         "endMonth": 12,
         "endDay": 31,
-        "bgColor": "00D9A5",
+        "bgColor": "1ABC9C",
         "textColor": "000000",
         "width": 15,
         "url": "Hunter-gatherer",
@@ -849,7 +849,7 @@
         "endYear": -1200,
         "endMonth": 12,
         "endDay": 31,
-        "bgColor": "7FDBFF",
+        "bgColor": "00CEC9",
         "textColor": "000000",
         "width": 10,
         "url": "Bronze_Age",
@@ -863,7 +863,7 @@
         "endYear": -500,
         "endMonth": 12,
         "endDay": 31,
-        "bgColor": "00CEC9",
+        "bgColor": "7FDBFF",
         "textColor": "000000",
         "width": 8,
         "url": "Iron_Age",
@@ -961,7 +961,7 @@
         "endYear": 2020,
         "endMonth": 12,
         "endDay": 31,
-        "bgColor": "48DBFB",
+        "bgColor": "ABDEE6",
         "textColor": "000000",
         "width": 11,
         "url": "Information_Age",
@@ -975,7 +975,7 @@
         "endYear": 4242,
         "endMonth": 4,
         "endDay": 2,
-        "bgColor": "ABDEE6",
+        "bgColor": "48DBFB",
         "textColor": "000000",
         "width": 6,
         "url": "Artificial_intelligence",
@@ -1005,7 +1005,7 @@
         "endYear": -5000,
         "endMonth": 12,
         "endDay": 31,
-        "bgColor": "FF8C94",
+        "bgColor": "6EB5FF",
         "textColor": "000000",
         "width": 6,
         "url": "Tribe",
@@ -1033,7 +1033,7 @@
         "endYear": -500,
         "endMonth": 12,
         "endDay": 31,
-        "bgColor": "F8A5C2",
+        "bgColor": "5F9EA0",
         "textColor": "000000",
         "width": 11,
         "url": "City-state",
@@ -1047,7 +1047,7 @@
         "endYear": 1900,
         "endMonth": 12,
         "endDay": 31,
-        "bgColor": "6EB5FF",
+        "bgColor": "FF8C94",
         "textColor": "000000",
         "width": 7,
         "url": "Empire",
@@ -1075,7 +1075,7 @@
         "endYear": 4242,
         "endMonth": 4,
         "endDay": 2,
-        "bgColor": "5F9EA0",
+        "bgColor": "F8A5C2",
         "textColor": "000000",
         "width": 13,
         "url": "Nation_state",
@@ -1415,7 +1415,7 @@
         "endYear": 1910,
         "endMonth": 12,
         "endDay": 31,
-        "bgColor": "4ECDC4",
+        "bgColor": "AF7AC5",
         "textColor": "000000",
         "width": 8,
         "url": "Romantic_music",
@@ -1429,7 +1429,7 @@
         "endYear": 1925,
         "endMonth": 12,
         "endDay": 31,
-        "bgColor": "AF7AC5",
+        "bgColor": "4ECDC4",
         "textColor": "000000",
         "width": 13,
         "url": "Impressionism_in_music",
@@ -1508,7 +1508,7 @@
         "fragment": ""
       },
       {
-        "caption": "Medieval Scholastic",
+        "caption": "Scholastic",
         "startYear": 1100,
         "startMonth": 1,
         "startDay": 1,
@@ -1517,12 +1517,12 @@
         "endDay": 31,
         "bgColor": "F7D794",
         "textColor": "000000",
-        "width": 19,
+        "width": 10,
         "url": "Scholasticism",
         "fragment": ""
       },
       {
-        "caption": "Renaissance Humanism",
+        "caption": "Humanism",
         "startYear": 1400,
         "startMonth": 1,
         "startDay": 1,
@@ -1531,7 +1531,7 @@
         "endDay": 31,
         "bgColor": "FDA7DF",
         "textColor": "000000",
-        "width": 20,
+        "width": 8,
         "url": "Renaissance_humanism",
         "fragment": ""
       },
