--- a/Jsons/tvConfig2.json
+++ b/Jsons/tvConfig2.json
@@ -1508,25 +1508,25 @@
         "fragment": ""
       },
       {
-        "caption": "Scholastic",
-        "startYear": 1100,
+        "caption": "Patristic",
+        "startYear": 200,
         "startMonth": 1,
         "startDay": 1,
-        "endYear": 1500,
+        "endYear": 600,
         "endMonth": 12,
         "endDay": 31,
         "bgColor": "F7D794",
         "textColor": "000000",
-        "width": 10,
+        "width": 9,
         "url": "Scholasticism",
         "fragment": ""
       },
       {
-        "caption": "Humanism",
-        "startYear": 1400,
+        "caption": "Medieval",
+        "startYear": 600,
         "startMonth": 1,
         "startDay": 1,
-        "endYear": 1600,
+        "endYear": 1300,
         "endMonth": 12,
         "endDay": 31,
         "bgColor": "FDA7DF",
@@ -1536,11 +1536,11 @@
         "fragment": ""
       },
       {
-        "caption": "Rationalist",
-        "startYear": 1600,
+        "caption": "Renaissance",
+        "startYear": 1300,
         "startMonth": 1,
         "startDay": 1,
-        "endYear": 1800,
+        "endYear": 1600,
         "endMonth": 12,
         "endDay": 31,
         "bgColor": "63CDDA",
@@ -1550,16 +1550,16 @@
         "fragment": ""
       },
       {
-        "caption": "Empiricist",
+        "caption": "Rationalist/Empiricist",
         "startYear": 1600,
         "startMonth": 1,
         "startDay": 1,
-        "endYear": 1800,
+        "endYear": 1780,
         "endMonth": 12,
         "endDay": 31,
         "bgColor": "F3A683",
         "textColor": "000000",
-        "width": 10,
+        "width": 22,
         "url": "Empiricism",
         "fragment": ""
       },
@@ -1579,10 +1579,10 @@
       },
       {
         "caption": "Existentialist",
-        "startYear": 1840,
+        "startYear": 1850,
         "startMonth": 1,
         "startDay": 1,
-        "endYear": 1970,
+        "endYear": 1950,
         "endMonth": 12,
         "endDay": 31,
         "bgColor": "B8E994",
